<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlaylistMaker</string>
    <string name="main_title">PlaylistMaker</string>
    <string name="buttonMainSearch">Search</string>
    <string name="buttonMainMedia">Media</string>
    <string name="buttonMainSettings">Settings</string>
    <string name="buttonSettingsLight">Light</string>
    <string name="buttonSettingsDark">Dark</string>
    <string name="buttonSettingsSave">Save</string>
    <string name="buttonSettingsBack">Back</string>
    <string name="textSettingsTheme">Choose App Theme</string>

    <!-- Новая строка для кнопки "Поделиться приложением" -->
    <string name="buttonShareApp">Share App</string>

    <!-- Новая строка для текста сообщения -->
    <string name="share_message">Check out this awesome app PlaylistMaker from ИВТ-211!</string>
    <!-- Новая строка для кнопки "Написать в поддержку" -->
    <string name="buttonWriteToSupport">Write to Support</string>

    <!-- Строки для почтового адреса, темы и тела письма -->
    <string name="support_email">chitac2002@gmail.com</string>
    <string name="email_subject">Message to Playlist Maker Developers</string>
    <string name="email_body">It works!!</string>
    <string name="privacy_policy_url">https://vivt.ru</string>
    <string name="buttonPrivacyPolicy">User Agreement</string>

    <string name="buttonBack">Back</string>
    <string name="clear_search">Очистить поисковый запрос</string>
    <string name="search_hint">Search</string>

    <!-- Строка для заголовка экрана поиска -->
    <string name="search_title">Search Screen</string>
</resources>