<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/settings_screen"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        style="@style/textMessageTitle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSettingsTheme"
        style="@style/textMessageMain"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="185dp"
            android:layout_height="110dp"
            android:id="@+id/btnThemeD"
            style="@style/mainButton"
            android:text="@string/buttonSettingsLight"
            android:layout_weight="1"
            android:drawableLeft="@drawable/sun" /> <!-- Иконка солнца слева -->

        <Button
            android:layout_width="185dp"
            android:layout_height="110dp"
            android:id="@+id/btnThemeN"
            style="@style/mainButton"
            android:text="@string/buttonSettingsDark"
            android:layout_weight="1"
            android:drawableLeft="@drawable/moon" /> <!-- Иконка луны слева -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnWriteToSupport"
            android:text="@string/buttonWriteToSupport"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrivacyPolicy"
            android:text="@string/buttonPrivacyPolicy"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="215dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="96dp"
            android:id="@+id/btnBack"
            style="@style/mainButton"
            android:text="@string/buttonSettingsBack"
            android:layout_marginEnd="45dp"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>