<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/search_screen"
    tools:context=".SearchActivity"
    android:padding="16dp">

    <!-- Заголовок -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        style="@style/textMessageTitle"/>

    <!-- Поле для ввода поискового запроса с иконкой поиска -->
    <EditText
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext_background"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/search" />  <!-- Иконка поиска слева -->

    <!-- Кнопка очистки -->
    <ImageButton
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_clear"
        android:contentDescription="@string/clear_search"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:visibility="gone"
        android:layout_gravity="end"
        android:layout_marginTop="-35dp"/>

    <!-- Кнопка "Назад" -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="96dp"
            android:id="@+id/btnBack"
            style="@style/mainButton"
            android:text="@string/buttonBack"
            android:layout_marginEnd="45dp"
            android:layout_weight="1"/>


    </LinearLayout>

</LinearLayout>